2011-09-04  Abhishek Arya  <inferno@chromium.org>

        Crash in Range::processAncestorsAndTheirSiblings.
        https://bugs.webkit.org/show_bug.cgi?id=67556

        Reviewed by Ryosuke Niwa.

        Create a temporary RefPtr Node vector to keep all the ancestor's
        childs so that we don't access removed child nodes.

        Test: fast/dom/Range/range-delete-contents-event-fire-crash.html

        * dom/Range.cpp:
        (WebCore::Range::processContents):
        (WebCore::Range::processAncestorsAndTheirSiblings):

2011-09-04  Jeremy Apthorp  <jeremya@google.com>

        Don't detach elements from the render tree when entering fullscreen mode
        https://bugs.webkit.org/show_bug.cgi?id=66531

        This prevents plugin instances from being destroyed and reinstantiated
        when entering fullscreen mode.

        Reviewed by Darin Fisher.

        Test: plugins/fullscreen-plugins-dont-reload.html

        * dom/Document.cpp:
        (WebCore::Document::webkitWillEnterFullScreenForElement):
        (WebCore::Document::webkitDidExitFullScreenForElement):
        * dom/NodeRenderingContext.cpp:
        (WebCore::NodeRendererFactory::createRendererIfNeeded):
        * rendering/RenderFullScreen.cpp:
        (createFullScreenStyle):
        (RenderFullScreen::wrapRenderer):
        (RenderFullScreen::unwrapRenderer):
        * rendering/RenderFullScreen.h:

2011-09-04  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/10071256> Retain retired custom fonts until the next style recalc

        Reviewed by Darin Adler.

        Test: fast/css/font-face-used-after-retired.html

        During style recalc, existing renderers may reference their old style, including font data.
        Allow them to do so safely by keeping retired custom font data around until after style recalc.

        * css/CSSFontFace.cpp:
        (WebCore::CSSFontFace::retireCustomFont): Added. Calls through to CSSFontSelector, if the font