@@ -1,5 +1,13 @@
 2011-09-04  Abhishek Arya  <inferno@chromium.org>
 
+        Unreviewed. Compile fix for r94511.
+
+        * dom/Range.cpp:
+        (WebCore::Range::processContents):
+        (WebCore::Range::processAncestorsAndTheirSiblings):
+
+2011-09-04  Abhishek Arya  <inferno@chromium.org>
+
         Crash in Range::processAncestorsAndTheirSiblings.
         https://bugs.webkit.org/show_bug.cgi?id=67556
 
